added hover, redid table, added styles.css

--- a/cyber.html
+++ b/cyber.html
@@ -23,6 +23,7 @@
     <ul class="homepage_navigation">
       <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="index.html">Главная</a></li>
       <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="contacts.html">Контакты</a></li>
+      <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="todo.html">Голосование</a></li>
       <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="#">Поиск</a></li>
       <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="#">О нас</a></li>
     </ul>
