--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
   </div>
   <nav class="navigation">
     <ul class="homepage_navigation">
-      <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="index.html">Главная</a></li>
+      <li class="homepage_navigation_list active"><a class="homepage_navigation_list_item" href="index.html">Главная</a></li>
       <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="contacts.html">Контакты</a></li>
+      <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="todo.html">Голосование</a></li>
       <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="#">Поиск</a></li>
       <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="#">О нас</a></li>
     </ul>
@@ -92,183 +93,186 @@
     <img class="gallery_item" src="img/ronaldo.jpg" alt="404">
     <img class="gallery_item" src="img/images.jpg" alt="404">
   </section>
-  <table class="table">
-    <thead class="thead">
-    <tr class="tr">
-      <th class="th">Команда</th>
-      <th class="th">Очки</th>
-      <th class="th">Игры</th>
-      <th class="th">Забито голов</th>
-      <th class="th">Пропущено голов</th>
-      <th class="th">Разница мячей</th>
-      <th class="th">Текущая форма</th>
-    </tr>
-    </thead>
-    <tbody class="tbody">
-    <tr class="tr">
-      <td class="td">Ливерпуль</td>
-      <td class="td">24</td>
-      <td class="td">10</td>
-      <td class="td">16</td>
-      <td class="td">8</td>
-      <td class="td">+8</td>
-      <td class="td">ВВВНВ</td>
-    </tr>
-    <tr class="tr">
-      <td class="td">Тоттенхем</td>
-      <td class="td">24</td>
-      <td class="td">10</td>
-      <td class="td">15</td>
-      <td class="td">9</td>
-      <td class="td">+6</td>
-      <td class="td">ВВПВН</td>
-    </tr>
-    <tr class="tr">
-      <td class="td">Тоттенхем</td>
-      <td class="td">24</td>
-      <td class="td">10</td>
-      <td class="td">15</td>
-      <td class="td">9</td>
-      <td class="td">+6</td>
-      <td class="td">ВВПВН</td>
-    </tr>
-    <tr class="tr">
-      <td class="td">Тоттенхем</td>
-      <td class="td">24</td>
-      <td class="td">10</td>
-      <td class="td">15</td>
-      <td class="td">9</td>
-      <td class="td">+6</td>
-      <td class="td">ВВПВН</td>
-    </tr>
-    <tr class="tr">
-      <td class="td">Тоттенхем</td>
-      <td class="td">24</td>
-      <td class="td">10</td>
-      <td class="td">15</td>
-      <td class="td">9</td>
-      <td class="td">+6</td>
-      <td class="td">ВВПВН</td>
-    </tr>
-    <tr class="tr">
-      <td class="td">Тоттенхем</td>
-      <td class="td">24</td>
-      <td class="td">10</td>
-      <td class="td">15</td>
-      <td class="td">9</td>
-      <td class="td">+6</td>
-      <td class="td">ВВПВН</td>
-    </tr>
-    <tr class="tr">
-      <td class="td">Тоттенхем</td>
-      <td class="td">24</td>
-      <td class="td">10</td>
-      <td class="td">15</td>
-      <td class="td">9</td>
-      <td class="td">+6</td>
-      <td class="td">ВВПВН</td>
-    </tr>
-    <tr class="tr">
-      <td class="td">Тоттенхем</td>
-      <td class="td">24</td>
-      <td class="td">10</td>
-      <td class="td">15</td>
-      <td class="td">9</td>
-      <td class="td">+6</td>
-      <td class="td">ВВПВН</td>
-    </tr>
-    <tr class="tr">
-      <td class="td">Тоттенхем</td>
-      <td class="td">24</td>
-      <td class="td">10</td>
-      <td class="td">15</td>
-      <td class="td">9</td>
-      <td class="td">+6</td>
-      <td class="td">ВВПВН</td>
-    </tr>
-    <tr class="tr">
-      <td class="td">Тоттенхем</td>
-      <td class="td">24</td>
-      <td class="td">10</td>
-      <td class="td">15</td>
-      <td class="td">9</td>
-      <td class="td">+6</td>
-      <td class="td">ВВПВН</td>
-    </tr>
-    <tr class="tr">
-      <td class="td">Тоттенхем</td>
-      <td class="td">24</td>
-      <td class="td">10</td>
-      <td class="td">15</td>
-      <td class="td">9</td>
-      <td class="td">+6</td>
-      <td class="td">ВВПВН</td>
-    </tr>
-    <tr class="tr">
-      <td class="td">Тоттенхем</td>
-      <td class="td">24</td>
-      <td class="td">10</td>
-      <td class="td">15</td>
-      <td class="td">9</td>
-      <td class="td">+6</td>
-      <td class="td">ВВПВН</td>
-    </tr>
-    <tr class="tr">
-      <td class="td">Тоттенхем</td>
-      <td class="td">24</td>
-      <td class="td">10</td>
-      <td class="td">15</td>
-      <td class="td">9</td>
-      <td class="td">+6</td>
-      <td class="td">ВВПВН</td>
-    </tr>
-    <tr class="tr">
-      <td class="td">Тоттенхем</td>
-      <td class="td">24</td>
-      <td class="td">10</td>
-      <td class="td">15</td>
-      <td class="td">9</td>
-      <td class="td">+6</td>
-      <td class="td">ВВПВН</td>
-    </tr>
-    <tr class="tr">
-      <td class="td">Тоттенхем</td>
-      <td class="td">24</td>
-      <td class="td">10</td>
-      <td class="td">15</td>
-      <td class="td">9</td>
-      <td class="td">+6</td>
-      <td class="td">ВВПВН</td>
-    </tr>
-    <tr class="tr">
-      <td class="td">Тоттенхем</td>
-      <td class="td">24</td>
-      <td class="td">10</td>
-      <td class="td">15</td>
-      <td class="td">9</td>
-      <td class="td">+6</td>
-      <td class="td">ВВПВН</td>
-    </tr>
-    <tr class="tr">
-      <td class="td">Тоттенхем</td>
-      <td class="td">24</td>
-      <td class="td">10</td>
-      <td class="td">15</td>
-      <td class="td">9</td>
-      <td class="td">+6</td>
-      <td class="td">ВВПВН</td>
-    </tr>
-    <tr class="tr">
-      <td class="td">Тоттенхем</td>
-      <td class="td">24</td>
-      <td class="td">10</td>
-      <td class="td">15</td>
-      <td class="td">9</td>
-      <td class="td">+6</td>
-      <td class="td">ВВПВН</td>
-    </tr>
-    </tbody>
-  </table>
+  <div class="table-container">
+    <div class="table-scroll">
+      <table class="table">
+        <thead class="thead">
+        <tr class="tr">
+          <th class="th">Команда</th>
+          <th class="th">Очки</th>
+          <th class="th">Игры</th>
+          <th class="th">Забито голов</th>
+          <th class="th">Пропущено голов</th>
+          <th class="th">Разница мячей</th>
+          <th class="th">Текущая форма</th>
+        </tr>
+        </thead>
+        <tbody class="tbody">
+        <tr class="tr">
+          <td class="td">Ливерпуль</td>
+          <td class="td">24</td>
+          <td class="td">10</td>
+          <td class="td">16</td>
+          <td class="td">8</td>
+          <td class="td">+8</td>
+          <td class="td">ВВВНВ</td>
+        </tr>
+        <tr class="tr">
+          <td class="td">Тоттенхем</td>
+          <td class="td">24</td>
+          <td class="td">10</td>
+          <td class="td">15</td>
+          <td class="td">9</td>
+          <td class="td">+6</td>
+          <td class="td">ВВПВН</td>
+        </tr>
+        <tr class="tr">
+          <td class="td">Тоттенхем</td>
+          <td class="td">24</td>
+          <td class="td">10</td>
+          <td class="td">15</td>
+          <td class="td">9</td>
+          <td class="td">+6</td>
+          <td class="td">ВВПВН</td>
+        </tr>
+        <tr class="tr">
+          <td class="td">Тоттенхем</td>
+          <td class="td">24</td>
+          <td class="td">10</td>
+          <td class="td">15</td>
+          <td class="td">9</td>
+          <td class="td">+6</td>
+          <td class="td">ВВПВН</td>
+        </tr>
+        <tr class="tr">
+          <td class="td">Тоттенхем</td>
+          <td class="td">24</td>
+          <td class="td">10</td>
+          <td class="td">15</td>
+          <td class="td">9</td>
+          <td class="td">+6</td>
+          <td class="td">ВВПВН</td>
+        </tr>
+        <tr class="tr">
+          <td class="td">Тоттенхем</td>
+          <td class="td">24</td>
+          <td class="td">10</td>
+          <td class="td">15</td>
+          <td class="td">9</td>
+          <td class="td">+6</td>
+          <td class="td">ВВПВН</td>
+        </tr>
+        <tr class="tr">
+          <td class="td">Тоттенхем</td>
+          <td class="td">24</td>
+          <td class="td">10</td>
+          <td class="td">15</td>
+          <td class="td">9</td>
+          <td class="td">+6</td>
+          <td class="td">ВВПВН</td>
+        </tr>
+        <tr class="tr">
+          <td class="td">Тоттенхем</td>
+          <td class="td">24</td>
+          <td class="td">10</td>
+          <td class="td">15</td>
+          <td class="td">9</td>
+          <td class="td">+6</td>
+          <td class="td">ВВПВН</td>
+        </tr>
+        <tr class="tr">
+          <td class="td">Тоттенхем</td>
+          <td class="td">24</td>
+          <td class="td">10</td>
+          <td class="td">15</td>
+          <td class="td">9</td>
+          <td class="td">+6</td>
+          <td class="td">ВВПВН</td>
+        </tr>
+        <tr class="tr">
+          <td class="td">Тоттенхем</td>
+          <td class="td">24</td>
+          <td class="td">10</td>
+          <td class="td">15</td>
+          <td class="td">9</td>
+          <td class="td">+6</td>
+          <td class="td">ВВПВН</td>
+        </tr>
+        <tr class="tr">
+          <td class="td">Тоттенхем</td>
+          <td class="td">24</td>
+          <td class="td">10</td>
+          <td class="td">15</td>
+          <td class="td">9</td>
+          <td class="td">+6</td>
+          <td class="td">ВВПВН</td>
+        </tr>
+        <tr class="tr">
+          <td class="td">Тоттенхем</td>
+          <td class="td">24</td>
+          <td class="td">10</td>
+          <td class="td">15</td>
+          <td class="td">9</td>
+          <td class="td">+6</td>
+          <td class="td">ВВПВН</td>
+        </tr>
+        <tr class="tr">
+          <td class="td">Тоттенхем</td>
+          <td class="td">24</td>
+          <td class="td">10</td>
+          <td class="td">15</td>
+          <td class="td">9</td>
+          <td class="td">+6</td>
+          <td class="td">ВВПВН</td>
+        </tr>
+        <tr class="tr">
+          <td class="td">Тоттенхем</td>
+          <td class="td">24</td>
+          <td class="td">10</td>
+          <td class="td">15</td>
+          <td class="td">9</td>
+          <td class="td">+6</td>
+          <td class="td">ВВПВН</td>
+        </tr>
+        <tr class="tr">
+          <td class="td">Тоттенхем</td>
+          <td class="td">24</td>
+          <td class="td">10</td>
+          <td class="td">15</td>
+          <td class="td">9</td>
+          <td class="td">+6</td>
+          <td class="td">ВВПВН</td>
+        </tr>
+        <tr class="tr">
+          <td class="td">Тоттенхем</td>
+          <td class="td">24</td>
+          <td class="td">10</td>
+          <td class="td">15</td>
+          <td class="td">9</td>
+          <td class="td">+6</td>
+          <td class="td">ВВПВН</td>
+        </tr>
+        <tr class="tr">
+          <td class="td">Тоттенхем</td>
+          <td class="td">24</td>
+          <td class="td">10</td>
+          <td class="td">15</td>
+          <td class="td">9</td>
+          <td class="td">+6</td>
+          <td class="td">ВВПВН</td>
+        </tr>
+        <tr class="tr">
+          <td class="td">Тоттенхем</td>
+          <td class="td">24</td>
+          <td class="td">10</td>
+          <td class="td">15</td>
+          <td class="td">9</td>
+          <td class="td">+6</td>
+          <td class="td">ВВПВН</td>
+        </tr>
+        </tbody>
+      </table>
+    </div></div>
   <section class="section_load_time">
     <h3 class="time_title">Страница загрузилась всего за:</h3>
     <p class="time__duration"></p>
