--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <script src="./script/load_time.js"></script>
+  <script src="./script/active_menu.js"></script>
   <meta charset="UTF-8">
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +23,7 @@
   </div>
   <nav class="navigation">
     <ul class="homepage_navigation">
-      <li class="homepage_navigation_list active"><a class="homepage_navigation_list_item" href="index.html">Главная</a></li>
+      <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="index.html">Главная</a></li>
       <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="contacts.html">Контакты</a></li>
       <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="todo.html">Голосование</a></li>
       <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="#">Поиск</a></li>
