--- a/contacts.html
+++ b/contacts.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" href="css/styles.css">
 <head>
   <script src="./script/load_time.js"></script>
+  <script src="./script/active_menu.js"></script>
   <title>Контакты</title>
   <style>
     body {
@@ -49,7 +50,7 @@
     <nav class="navigation">
       <ul class="homepage_navigation">
         <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="index.html">Главная</a></li>
-        <li class="homepage_navigation_list active"><a class="homepage_navigation_list_item" href="contacts.html">Контакты</a></li>
+        <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="contacts.html">Контакты</a></li>
         <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="todo.html">Голосование</a></li>
         <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="#">Поиск</a></li>
         <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="#">О нас</a></li>
