--- a/cyber.html
+++ b/cyber.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
 <html lang="ru">
+<style>
+   @keyframes spin {
+     to { transform: rotate(360deg); }
+   }
+   #preloader {
+     border: 16px solid #f3f3f3;
+     border-top: 16px solid #3498db;
+     border-radius: 50%;
+     width: 120px;
+     height: 120px;
+     animation: spin 2s linear infinite;
+   }
+</style>
 <head>
   <script src="./script/load_time.js"></script>
+  <script src="./script/dataLoader.js"></script>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/styles.css">
   <title>Новости о киберспорте</title>
@@ -42,6 +56,19 @@
       <p class="news-content">Начался новый сезон Overwatch League, где восемь команд будут соревноваться за звание чемпиона. Ожидается, что матчи будут ожесточенными и напряженными, а зрители смогут насладиться невероятной игрой и эмоциями.</p>
       <img class="news_content_image" src="img/overwatch-section1-feature1.avif" alt="404">
     </div>
+  </section>
+  <section class="comments-section">
+    <h2 class="comments-title">Комментарии</h2>
+    <ul id="comments-list" class="comments-list">
+      <div id="userList"></div>
+      <div id="preloader" style="border: 16px solid #f3f3f3;
+     border-top: 16px solid #3498db;
+     border-radius: 50%;
+     width: 120px;
+     height: 120px;
+     animation: spin 2s linear infinite;"></div>
+      <button id="refresh" class="button" style="display: none;">Обновить комментарии</button>
+    </ul>
   </section>
   <section class="section_load_time">
     <h3 class="time_title">Страница загрузилась всего за:</h3>
